<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ch.bedag.dap.hellodata</groupId>
        <artifactId>hello-data-spring-boot-starter-parent</artifactId>
        <version>develop-SNAPSHOT</version>
        <relativePath>../../hello-data-commons/hello-data-spring-boot-starter-parent/pom.xml</relativePath>
    </parent>

    <artifactId>hello-data-sidecar-superset</artifactId>
    <version>develop-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>hello-data-sidecar-superset</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <main.class>ch.bedag.dap.hellodata.sidecars.superset.HDSidecarSuperset</main.class>
    </properties>

    <dependencies>
        <dependency>
            <groupId>ch.bedag.dap.hellodata</groupId>
            <artifactId>hello-data-sidecar-common</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.bedag.dap.hellodata</groupId>
            <artifactId>hello-data-nats-spring</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.bedag.dap.hellodata</groupId>
            <artifactId>hello-data-common</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <!--commons-->
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
        </dependency>
        <dependency>
            <groupId>de.codecentric</groupId>
            <artifactId>spring-boot-admin-starter-client</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                    <layout>JAR</layout>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>docker</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>docker-tag-name</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>regex-property</goal>
                                </goals>
                                <configuration>
                                    <name>docker.tag.name</name>
                                    <value>${project.version}</value>
                                    <!-- inverse match the characters allowed in docker tag names -->
                                    <regex>[^A-Za-z0-9_.-]</regex>
                                    <!-- empty replacement replaces all occurrences with an empty string -->
                                    <!-- if no match is found, the value is a valid docker tag name -->
                                    <failIfNoMatch>false</failIfNoMatch>
                                </configuration>
                            </execution>
                            <execution>
                                <!-- use standard docker-tag latest for development-SNAPSHOT -->
                                <id>use-latest</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>regex-property</goal>
                                </goals>
                                <configuration>
                                    <name>docker.tag.name</name>
                                    <value>${project.version}</value>
                                    <regex>develop-SNAPSHOT</regex>
                                    <replacement>latest</replacement>
                                    <failIfNoMatch>false</failIfNoMatch>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>io.fabric8</groupId>
                        <artifactId>docker-maven-plugin</artifactId>
                        <version>0.43.4</version>
                        <executions>
                            <execution>
                                <id>build-docker-image</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>push-docker-image</id>
                                <phase>${push-docker-image-phase}</phase>
                                <goals>
                                    <goal>push</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <autoPull>always</autoPull>
                            <verbose>true</verbose>
                            <logStdout>true</logStdout>
                            <images>
                                <image>
                                    <name>${docker.namespace}/hello-data-sidecar-superset:${docker.tag.name}</name>
                                    <build>
                                        <dockerFile>Dockerfile</dockerFile>
                                        <dockerFileDir>${project.basedir}</dockerFileDir>
                                    </build>
                                </image>
                            </images>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
